[gd_scene load_steps=5 format=3 uid="uid://bgdbr2f4waw4l"]

[ext_resource type="Script" path="res://Scripts/level_cleared_screen.gd" id="1_thnjb"]
[ext_resource type="Theme" uid="uid://6g50mxodmcvl" path="res://UI Styles/menu_buttons.tres" id="2_bw42p"]
[ext_resource type="Texture2D" uid="uid://y68ihhlvhs67" path="res://Art/background.png" id="2_weaw2"]
[ext_resource type="Theme" uid="uid://ctbm7rt0bnens" path="res://UI Styles/normal_text.tres" id="3_low31"]

[node name="level_cleared_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bw42p")
script = ExtResource("1_thnjb")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(320, 180)
texture = ExtResource("2_weaw2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 48.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_bw42p")
text = "Level Cleared!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
alignment = 1

[node name="Adventurers Field" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_low31")
text = "Adventurers: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Adventurers Count" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_low31")
text = "x / x"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
alignment = 1

[node name="Treasure Field" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("3_low31")
text = "Treasure: "

[node name="Treasure Count" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("3_low31")
text = "x / x "

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
alignment = 1

[node name="level_select_button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_bw42p")
text = "(L)evel Select"

[node name="restart_button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_bw42p")
text = "(R)etry"

[node name="next_level_button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_bw42p")
text = "(N)ext Level"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/level_select_button" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/next_level_button" to="." method="_on_next_level_button_pressed"]
